<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_privacy_policy"
        android:icon="@drawable/ic_launcher"
        android:title="@string/action_privacy_policy"
        app:showAsAction="never" />
    <item android:id="@+id/action_setLocation"
        android:icon="@drawable/ic_launcher"
        android:title="@string/action_set_location"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_wakeup"
        android:icon="@drawable/ic_launcher"
        android:title="@string/action_wakeup"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_current"
        android:icon="@drawable/ic_launcher"
        android:title="@string/action_current"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_trips"
        android:icon="@drawable/ic_launcher"
        android:title="@string/action_trips"
        app:showAsAction="never" />
    <item android:id="@+id/action_calendar"
        android:icon="@drawable/ic_launcher"
        android:title="@string/action_calendar"
        app:showAsAction="never" />
    <item android:id="@+id/action_satellites"
        android:icon="@drawable/ic_launcher"
        android:title="@string/action_satellites"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_launcher"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item android:id="@+id/action_compass"
        android:icon="@drawable/ic_launcher"
        android:title="@string/action_compass"
        app:showAsAction="never" />
    <item android:id="@+id/action_calculator"
        android:icon="@drawable/ic_launcher"
        android:title="@string/action_calculator"
        app:showAsAction="never" />
    <item android:id="@+id/action_sms_location"
        android:icon="@drawable/ic_launcher"
        android:title="@string/action_sms_location"
        app:showAsAction="never" />
</menu>