<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="70"
        android:key="Bike_rider_wt"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:inputType="number"
        android:title="@string/pref_bike_rider_wt" />
    <EditTextPreference
        android:defaultValue="12"
        android:key="Bike_bike_wt"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:inputType="number"
        android:title="@string/pref_bike_bike_wt" />
    <ListPreference
        android:defaultValue="0.5"
        android:entries="@array/pref_bike_front_array"
        android:entryValues="@array/pref_bike_front_values"
        android:key="Bike_front"
        android:title="@string/pref_bike_front" />
    <ListPreference
        android:defaultValue="0.005"
        android:entries="@array/pref_bike_rolling_array"
        android:entryValues="@array/pref_bike_rolling_values"
        android:key="Bike_rolling"
        android:title="@string/pref_bike_rolling" />
    <ListPreference
        android:defaultValue="1.00"
        android:entries="@array/pref_bike_drag_array"
        android:entryValues="@array/pref_bike_drag_values"
        android:key="Bike_drag"
        android:title="@string/pref_bike_drag" />

    <ListPreference
        android:defaultValue="48"
        android:entries="@array/pref_bike_commit_array"
        android:entryValues="@array/pref_bike_commit_values"
        android:key="Bike_commit"
        android:title="@string/pref_bike_commit" />

</PreferenceScreen>
