 <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_map_play"
        android:title="@string/action_map_play"
        android:icon="@drawable/playf_slow"
        android:showAsAction="always"
        tools:ignore="AppCompatResource">
    </item>

    <item
        android:id="@+id/action_map_pause"
        android:title="@string/action_map_pause"
        android:icon="@drawable/pause"
        android:showAsAction="always"
        tools:ignore="AppCompatResource">
    </item>

    <item
        android:id="@+id/action_map_reverse"
        android:title="@string/action_map_reverse"
        android:icon="@drawable/playr_slow"
        android:showAsAction="always"
        tools:ignore="AppCompatResource">
    </item>

</menu>